--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
         <activity android:name=".module.elevation.cardview.CardViewActivity">
         </activity>
-        <activity android:name=".module.textview.TextViewActivity">
+        <activity android:name=".module.viewflipper.ViewFlipperActivity">
         </activity>
     </application>
 
